# git-conform

./: Cargo.toml  LICENSE  README.md  install  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md
src/: cli.rs  core.rs  lib.rs  main.rs  utils.rs
src/core/: api.rs  back.rs  backend.rs  front.rs
tests/: add.rs  cd.rs  check.rs  integration.rs  list.rs  remove.rs  scan.rs
tests/common/: mod.rs
