[package]
name = "git-conform"
version = "0.1.1"
edition = "2021"
description = "Keep track of your local git repositories"
repository = "https://github.com/ndr3www/git-conform"
license = "MIT"
readme = "README.md"
keywords = ["git", "tracker", "cli"]
categories = ["command-line-utilities", "development-tools", "visualization"]

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
clap = { version = "4.5.37", features = ["derive"] }
indicatif = "0.17.11"
walkdir = "2"
home = "0.5.11"
wait-timeout = "0.2.1"

[dev-dependencies]
serial_test = "3.2.0"

[lints.clippy]
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
