[package]
name = "git-conform"
version = "0.2.0"
edition = "2021"
description = "Keep track of your local git repositories"
repository = "https://github.com/ndr3www/git-conform"
license = "MIT"
readme = "README.md"
keywords = ["git", "tracker", "cli"]
categories = ["command-line-utilities", "development-tools", "visualization"]

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
clap = { version = "4.6.0", features = ["derive"] }
indicatif = "0.18.4"
walkdir = "2"
home = "0.5.12"
wait-timeout = "0.2.1"
colored = "3"

[dev-dependencies]
serial_test = "3.4.0"

[lints.clippy]
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
pedantic = "warn"
